apps/staging/obsidian/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: obsidian
  namespace: obsidian
spec:
  ingressClassName: traefik
  rules:
    - host: obs.oskcloud.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: obsidian
                port:
                  number: 3001
